# Cryptono-zip

./: Cargo.toml  README.md  test.txt
src/: lib.rs  main.rs
src/algorithms/: huffman.rs  lz77.rs  mod.rs
