[package]
name = "cryptono-zip"
version = "0.1.0"
edition = "2021"
authors = ["Artur Charylo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI Argument Parser 
clap = { version = "4.5.58", features = ["derive"] }

# Error handling
anyhow = "1.0.101"

# Bit manipulation
bit-vec = "0.8.0"