[package]
name = "cryptono-zip"
version = "1.0.0"
edition = "2021"
authors = ["Artur Charylo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cryptono-zip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

brotli = { version = "7", features = ["std"] }

# Deflate/Gzip
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }